--- a/src/style.css
+++ b/src/style.css
@@ -27,93 +27,14 @@ li {
   list-style-type: none;
 }
 
-/* HEADER */
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 2rem;
-  gap: 1.5rem;
-  margin: 15px 0;
-}
-
-header input {
-  padding: 1rem 1.4rem;
-  border-radius: 2rem;
-  flex-grow: 1;
-  background-color: var(--secondary);
-  border: none;
-  font-size: 1rem;
-  min-width: 100px;
-}
-
-header img {
-  height: 28px;
-  width: 28px;
-}
-
-header button:hover {
-  background-color: var(--secondary);
-}
-
-header .icon {
-  filter: contrast(30%);
-}
-
-header .profileimg {
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
-}
-
-header .links a{
-  padding: 10px 20px;
-  border-radius: 100px;
-}
-
-header .links a:hover{
-  background-color: var(--primary);
-  color: white;
-}
-
-header div{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 5px;
-}
-
-@media (max-width: 850px) {
-
-  header > div{
-    position: relative;
-  }
-
-  header .links{
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    background-color: var(--color-background);
-    top: 100%;
-    border-radius: 10px;
-    padding: 5px;
-  }
-
-  header div:hover .links{
-    display: flex;
-  }
-}
-
-@media (max-width: 500px) {
-
-  header .icon{
-    display: none;
-  }
- 
-}
-
-
 /* MAIN */
+
+.fail{
+  text-align: center;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
 .gallery {
   padding: 0 1rem;
   display: grid;
@@ -121,92 +42,4 @@ header div{
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 1rem;
   grid-auto-flow: row dense;
-}
-
-.gallery-item {
-  display: flex;
-  flex-direction: column;
-}
-
-.photo {
-  height: 100%;
-  width: 100%;
-  background-size: cover;
-  border-radius: 2rem;
-  overflow: hidden; 
-}
-
-.photo > div {
-  padding: 1rem;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  backdrop-filter: brightness(50%) blur(3px);
-  display: none;
-}
-
-.gallery-item:hover > .photo > div {
-  display: flex;
-  cursor: zoom-in;
-}
-
-.gallery-item .save-btn {
-  display: flex;
-  justify-content: center;
-}
-
-.gallery-item .links {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.gallery-item button {
-  padding: 1rem 1.4rem;
-  border-radius: 2rem;
-  border: none;
-  background-color: var(--logo);
-  color: var(--color-background);
-  font-size: 1rem;
-}
-
-.gallery-item .links-icon {
-  width: 35px;
-  height: 35px;
-  background-color: white;
-  padding: 0.5rem;
-  border-radius: 2rem;
-  font-size: 0.8rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.user{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  margin-top: 20px;
-}
-
-.user .img{
-  position: absolute;
-  border-radius: 100%;
-  width: 55px;
-  height: 55px;
-  border: 5px solid;
-  bottom: 100%;
-  background-size: cover;
-  background-position-x: 50%;
-  background-color: white;
-}
-
-.gallery-item:hover .img{
-  width: 100px;
-  height: 100px;
-  transition: 0.5s;
 }
